[package]
name = "ts_init"
version = "0.1.1"
edition = "2021"

authors = ["Yuki Yamaura <ymruki@gmail.com>"]
license = "MIT"
description = "A simple template for Rust project with tracing"
homepage = "https://github.com/yamaura/ts_init"
repository = "https://github.com/yamaura/ts_init"
readme = "README.md"
keywords = []
categories = []
include = ["src/**/*.rs", "README.md", "LICENSE"]

[package.metadata.release]
push = false
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "Bump version to {{version}}"
tag-message = "{{tag_name}}"

[package.metadata.docs.rs]
all-features = true

[dependencies]
tracing = "0.1.40"
tracing-journald = "0.3.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
