[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
edition = "2021"

authors = ["Yuki Yamaura <ymruki@gmail.com>"]
license = "MIT"
description = "A simple template for Rust project with tracing"
homepage = "https://github.com/yamaura/ts_init"
repository = "https://github.com/yamaura/ts_init"
readme = "README.md"
keywords = []
categories = []

[workspace.metadata.release]
push = false
tag-name = "{{version}}"
pre-release-commit-message = "Bump version to {{version}}"
tag-message = "{{tag_name}}"

[workspace.metadata.docs.rs]
all-features = true
